--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-widgets": "^4.3.2",
+    "prop-types": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
