--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ajv": "^6.5.1",
+    "mobx": "^5.0.3",
+    "mobx-react": "^5.2.3",
+    "prop-types": "latest",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
-    "react-widgets": "^4.3.2",
-    "prop-types": "latest"
+    "react-widgets": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
