--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "^16.4.1",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
+    "react-tooltip": "^3.6.1",
     "react-widgets": "^4.3.2",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
