--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "prop-types": "latest",
     "raf": "3.4.0",
     "react": "^16.6.3",
+    "react-clipboard.js": "^2.0.1",
     "react-dev-utils": "^5.0.3",
     "react-dom": "^16.6.3",
     "react-tooltip": "^3.9.0",
