增加发布信息，编辑Readme

--- a/package.json
+++ b/package.json
@@ -103,5 +103,6 @@
   },
   "devDependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.5"
-  }
+  },
+  "homepage": "https://www.mistytown.cn/snowstormvilla"
 }
